# pokemon-pure-platinum

./: README.md  meson.build  meson.options
asm/macros/: scrcmd.inc
game_doc/: encounters.md  exp.md  field_moves.md  game.md  items.md  moves.md  other.md  ui.md
include/: field_move_tasks.h  party.h  pokemon.h  scrcmd_party.h  unk_02054884.h
include/applications/party_menu/: defs.h
include/applications/pokemon_summary_screen/: main.h
include/battle/: ai_context.h  battle_context.h
include/battle_sub_menus/: battle_party.h
include/data/scripts/: scrcmd.h
include/overlay005/: honey_tree.h
include/struct_defs/: special_encounter.h  trainer_data.h
res/field/encounters/: encounters_mt_coronet_4f_room_3.json  encounters_mt_coronet_5f.json  encounters_mt_coronet_6f.json  encounters_route_206.json  encounters_turnback_cave_entrance.json  encounters_victory_road_1f.json  (+9 more)
res/text/: battle_bag.json  battle_party.json  battle_strings.json  common_strings.json  field_moves.json  party_menu.json  pokemon_summary_screen.json
src/: field_battle_data_transfer.c  field_move_tasks.c  list_menu.c  pokemon.c  roaming_pokemon.c  scrcmd.c  scrcmd_party.c  special_encounter.c  start_menu.c  trainer_data.c  unk_020298BC.c  unk_02054884.c  unk_02094EDC.c
src/applications/: naming_screen.c
src/battle/: battle_lib.c  battle_script.c  healthbox.c
src/battle_sub_menus/: battle_bag.c  battle_party.c  battle_party_text.c
src/overlay005/: daycare.c  field_control.c  honey_tree.c
src/overlay006/: npc_trade.c  wild_encounters.c
src/overlay104/: ov104_0222DCE0.c
(+1008 files in other folders)
