option('gdb_debugging', type : 'boolean', value : false)
option('revision', type : 'combo', choices: ['0', '1'], value : '1')
option('logging_enabled', type: 'boolean', value: false)

# disable tests since they will fail anyway for the mod
option('enable_tests', type: 'boolean', value: false, description: 'Enable checksum/test targets')